--- a/source/ddrescueview.lpi
+++ b/source/ddrescueview.lpi
@@ -98,8 +98,8 @@
           </CodeGeneration>
           <Linking>
             <Debugging>
-              <GenerateDebugInfo Value="False"/>
-              <StripSymbols Value="True"/>
+              <GenerateDebugInfo Value="True"/>
+              <StripSymbols Value="False"/>
             </Debugging>
             <LinkSmart Value="True"/>
             <Options>
